k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: default
  labels:
    app.kubernetes.io/name: product-catalog
    app.kubernetes.io/part-of: enterprise-devsecops-pipeline
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: product-catalog
